hphp/hack/test/typecheck/meth_caller/meth_caller10.php.exp
File "meth_caller10.php", line 13, characters 10-11:
Invalid return type (Typing[4110])
  File "meth_caller10.php", line 9, characters 20-22:
  Expected `int`
  File "meth_caller10.php", line 9, characters 20-22:
  This type argument to `X` must match exactly (it is invariant)
  File "meth_caller10.php", line 12, characters 15-24:
  But got `string`
