hphp/hack/test/typecheck/meth_caller/meth_caller10.php
<?hh

class X<T> {
  public function foo(T $x): T {
    return $x;
  }
}

function test(): X<int> {
  $caller = meth_caller(X::class, 'foo');
  $x = new X();
  $caller($x, 'a string');
  return $x;
}
